spacing fixes

--- a/style.css
+++ b/style.css
@@ -107,7 +107,6 @@ ul li {
 }
 
 #main-title {
-    margin-bottom: 0.5em;
     margin-top: 0.5em;
 }
 
@@ -304,7 +303,7 @@ ul li {
 
 .content h1 {
     color: #fff;
-    font-size: 6rem;
+    font-size: 5rem;
     text-align: center;
     position: absolute;
     width: 100%;
